code for biomes at south-east and brazil added, plus collapse and removal of biome_site fixes

--- a/app/assets/stylesheets/workflows.css.scss
+++ b/app/assets/stylesheets/workflows.css.scss
@@ -18,12 +18,15 @@
   background-color: darkGray;
   color: grey;
   height: auto;
+  cursor: pointer;
   div[class*='_biomes']{
     height: auto;
   }
 }
 
-
+.collapsed {
+  height: 0%;
+}
 
 hr {
   margin: 0 0 10px 0;
